# INHA_OperatingSystem_003

./: .gitignore  CMakeLists.txt  README.md
src/dining_philosophers_problems/: dining_philosophers_description.md  dining_philosophers_sol_bankers_algorithm.c  dining_philosophers_sol_no_hold_and_wait.c  dining_philosophers_sol_resource_ordering.c
src/producer_consumer_problems/: producer_consumer_description.md  producer_consumer_sol_condition_variable.c  producer_consumer_sol_semaphore.c
src/readers_writers_problems/: reader_preference.c  readers_writers_description.md  writer_preference.c
